# vpiatukhou-web-server-bak

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  DemoControllers.h  DemoExceptions.h  Main.cpp
demo/resources/config/: application.json
demo/resources/ssl/: demo.crt  demo.key  dh4096.pem
demo/resources/web_content/css/: foo.css
demo/resources/web_content/pages/: bar.html  foo.html
demo/resources/web_content/pages/errors/: forbidden.html  internalServerError.html  methodNotAllowed.html  notFound.html
lib/: Application.cpp  Application.h  ApplicationConfig.cpp  ApplicationConfig.h  CMakeLists.txt  HttpConnection.h  HttpController.h  HttpRequestHolder.cpp  HttpRequestHolder.h  HttpRequestResponse.h  HttpServer.cpp  HttpServer.h  HttpsConnection.cpp  HttpsConnection.h  HttpsServer.cpp  HttpsServer.h  MediaType.h  MediaTypeResolver.cpp  MediaTypeResolver.h  Port.h  ProgramOptions.cpp  ProgramOptions.h  RequestDispatcher.cpp  RequestDispatcher.h  StaticResouceController.cpp  StaticResouceController.h  StaticResourceReader.cpp  StaticResourceReader.h  UrlUtil.cpp  UrlUtil.h
lib/exceptions/: HttpControllerException.h  HttpControllerExceptionHandler.h  HttpErrorException.h  HttpErrorExceptionHandler.cpp  HttpErrorExceptionHandler.h
lib_integration_tests/: CMakeLists.txt  HttpServerApplicationTest.cpp  Resources.h.in
lib_integration_tests/resources/config/: application.json
lib_integration_tests/resources/web_content/base_dir/: foo.html
lib_unit_tests/: ApplicationConfigTest.cpp  CMakeLists.txt  HttpRequestHolderTest.cpp  MediaTypeResolverTest.cpp  UrlUtilTest.cpp
lib_unit_tests/resources/: application.json  configWithBaseDirWithoutLastDelimiter.json
